practice/aliyun/ack/stars-emmision/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-stars-emmision
  namespace: yuyang
spec:
  selector:
    app: pod-stars-emmision
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
